mostly cleaning up and version updates.
Signed-off-by: Philipp Etschel <philipp.etschel@ch.bosch.com>